syntax = "proto3";
package CIS.InternalServices.NotificationService.v2;
option csharp_namespace = "CIS.InternalServices.NotificationService.Contracts.v2";

message NotificationIdResponse {
    string NotificationId = 1;
}